--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,5 @@ openai>=1.45.0
 moviepy>=1.0.3
 pillow==9.5.0
 scikit-video
-git+https://github.com/huggingface/diffusers.git@862a7d5038c1c53641ffcab146a7eeb5ab683656
+#git+https://github.com/huggingface/diffusers.git@862a7d5038c1c53641ffcab146a7eeb5ab683656
+git+https://github.com/huggingface/diffusers.git
